Bug 97806 - BIDI text overlapping inside tables
Summary: BIDI text overlapping inside tables
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-01-24 18:10 UTC by Diego Iastrubni
Modified: 2005-01-30 10:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
a small test case for this bug. (658 bytes, text/html)
2005-01-24 18:26 UTC, Diego Iastrubni
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Diego Iastrubni 2005-01-24 18:10:42 UTC
Version:            (using KDE KDE 3.3.91)
Installed from:    Compiled From Sources

I noticed that BIDI text inside table, is sometimes overlapping, and this introduces a pretty unreadable text. 

A nice example, is showed @ http://www.kde.org/il, to see the effect, just resize the window, the problems will be showed in the lighter part of the table. Roumors claim that this is because of "text-align: justify;",

I could not reproduce it in small scale yet, when I manage to do that, I will attach to this bug report.
Comment 1 Diego Iastrubni 2005-01-24 18:26:08 UTC
Created attachment 9260 [details]
a small test case for this bug.
Comment 2 Allan Sandfeld 2005-01-24 20:47:55 UTC
Is it possible to replicate the problem with english text forced into RTL?

The problem is that I can't easily see where it breaks, and how it is supposed to look.
Comment 3 Charles Samuels 2005-01-29 23:24:35 UTC
CVS commit by charles: 

RTL text overlapping when using text-align: justify.

BUG: 97806

Easy one, I'm confident enough to commit without review on bugs.k.o.


  M +3 -1      font.cpp   1.33


--- kdelibs/khtml/rendering/font.cpp  #1.32:1.33
@@ -225,5 +225,7 @@ void Font::drawText( QPainter *p, int x,
         Q_ASSERT(onSegment);
         if (mode == WordWise) {
-           segmentWidth += closeWordAndGetWidth(fm, str, pos, lastWordBegin, to);
+            const int width = closeWordAndGetWidth(fm, str, pos, lastWordBegin, to);
+            segmentWidth += width;
+            widthList[lastWordBegin] = (short)width;
         }
 


Comment 4 Diego Iastrubni 2005-01-30 10:51:44 UTC
That seems to fix many sites which were broken for
over a year. 

Thank you!


		
__________________________________ 
Do you Yahoo!? 
Meet the all-new My Yahoo! - Try it today! 
http://my.yahoo.com