RTL text overlapping when using text-align: justify.

BUG: 97806

Easy one, I'm confident enough to commit without review on bugs.k.o.

svn path=/trunk/kdelibs/; revision=383931